15.feb (ws)
      - implement ST_systemFrameDistance style parameter
      - fix: when removing a measure, dont remove following vbox
      (mi)
      - improved tab<->pitched staff type conversion (to be completed) (r.4017)
14.feb (ws)
      - capella import: instrument names, midi instruments
      - remove QSessionManager from script bindings as its not compatible with
        newest qt
      - new preference settings: MyScoresPath, MyStylesPath, MyTemplatesPath,
        MyPluginsPath, MySoundFontsPath
        used in qt file dialogs
13.feb (ws)
      - add qt file dialogs for score load/save; can be enabled/disabled
        with cmake option NATIVE_FILEDIALOG in toplevel CMakeLists.txt
      (db)
      - copy editing for demo scores (usuariomuse)
09.feb (ws)
      - fix build with precompiled headers: build time is now 2min31sec for debug version
06.feb (lv)
      - MusicXML import fixes: Spanners
03.feb (ws)
      - fix "hide empty staves": mscore restart was needed after unchecking
      - fix #9040: Dragging note horizontally removes accidental permanently
02.feb (lv)
      - MusicXML import fixes: direction placement (not complete yet)
       (la)
      - improve MusicXML import of clefs
      - Changing velocity and on/off offsets for a group of selected notes (miwarre patch)
01.feb (la)
      - fix #9002: Reset Position doesn't affect tuplet bracket
30.jan (lv)
      - MusicXML import fixes: direction placement (not complete yet)
      - MusicXML export fixes: direction placement
      (db)
      - fixed vocal range for bartione and bass (in all languages)
27.jan (mi)
      - fix crash when opening time sig. palette (#8848)
      - corrected wrong C and Ccut time sig. bbox
26.jan (ws)
      - use QGlyphs() from Qt4.8 for drawing symbols which should speedup drawing
        (unfortunately this does not work (yet) for printing)
      - encapsulate QPainter into new Painter() class
25.jan (lv)
      - MusicXML import fixes: voltas
23.jan (lv)